# jazz-snake

./: .gitignore  README.md  pyproject.toml  requirements.txt  server.py
jazz_snake/: availablemoveslayer.py  boundarylayer.py  directpathlayer.py  foodlayer.py  gameboard.py  jazzsnake.py  snakelayer.py
jazz_snake/board/: PointType.py  celldatatype.py  deaththreatdata.py  deaththreatlevel.py  gameboard.py  gameboarddata.py  goaltype.py  layerlifecycle.py  pointtype.py  simpledata.py  stepdata.py
jazz_snake/layer/: areaslayer.py  boundarylayer.py  directpathlayer.py  foodlayer.py  goallayer.py  hazardlayer.py  layerfactory.py  lowriskzoneslayer.py  pathslayer.py  snakelayer.py  snakelistenerlayer.py  stepsfrompointlayer.py  yourheadlayer.py
jazz_snake/layer/path/: availableareapathlayer.py  foodpathscorer.py  headattackpathscorer.py  middlepathscorer.py  pathfollower.py  pathscorer.py  pathslayer.py  tailpathscorer.py
tests/: game_scenario.json  game_scenario_attack.json  game_scenario_dont_go_to_middle.json  game_scenario_doomed_food.json  game_scenario_down_to_tail.json  game_scenario_follow_tail.json  game_scenario_invalid_path.json  game_scenario_multi_snake.json  game_scenario_only_dir_is_down.json  game_scenario_should_not_follow_tail.json  game_scenario_snake_butt_crash.json  test_jazzsnake.py
