[tool.poetry]
name = "jazz-snake"
version = "0.1.0"
description = "battle snake"
authors = ["Jim Rennie <JLRennie@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
CherryPy = "^18.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
